Revise probability of detection plot to not include CM points that fail their quantification QC
Added additional code to 03_summarize_results notebook to look at the CM's probability of detection in Stages 2 and 3

--- a/03_summarize_results.ipynb
+++ b/03_summarize_results.ipynb
@@ -411,7 +411,36 @@
   {
    "cell_type": "markdown",
    "source": [
-    "All four overpasses were marked as detected by Carbon Mapper, but flagged as poor quality for quantification estimates. However, quantification estimates were provided for both data points to allow for potential of re-adding these points at a later analysis stage."
+    "All four overpasses were marked as detected by Carbon Mapper, but flagged as poor quality for quantification estimates. Exclude from analysis in the main text but include in SI. We were not aiming to flesh out a probability of detection for Carbon Mapper and thus are only including points that. ALl four of these points are also excluded in Stage 2 analysis, but overpasses 3 and 41 are re-added in Stage 3 (see below)."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    overpass_id  release_rate_kgh  operator_detected\n",
+      "22         23.0         26.001371               True\n",
+      "46         47.0         14.418687               True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compare with Stage 3\n",
+    "operator = 'Carbon Mapper'\n",
+    "overpasses = load_overpass_summary(operator, stage=3)\n",
+    "# Fail CM QC but pass stanford:\n",
+    "# Which overpasses would be included in a probability of detection plot:\n",
+    "columns = ['overpass_id','release_rate_kgh', 'operator_detected']\n",
+    "detection_prob = (overpasses['qc_summary'] =='fail_operator') & (overpasses['release_rate_kgh'] <= 30)\n",
+    "# detection_prob = (overpasses['qc_summary'] =='fail_operator')\n",
+    "print(overpasses.loc[detection_prob][columns])"
    ],
    "metadata": {
     "collapsed": false
