minor changes to presentation figs based on Evan's feedback

--- a/03_summarize_results.ipynb
+++ b/03_summarize_results.ipynb
@@ -378,17 +378,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "    overpass_id  release_rate_kgh  operator_detected\n",
-      "2           3.0          8.638673               True\n",
-      "22         23.0         26.001371               True\n",
-      "40         41.0         29.358277               True\n",
-      "46         47.0         14.418687               True\n"
+      "2             3          8.638673               True\n",
+      "7             8         35.006595               True\n",
+      "22           23         26.001371               True\n",
+      "36           37         42.147015               True\n",
+      "40           41         29.358277               True\n",
+      "46           47         14.418687               True\n"
      ]
     }
    ],
@@ -400,9 +402,10 @@
     "# Fail CM QC but pass stanford:\n",
     "# Which overpasses would be included in a probability of detection plot:\n",
     "columns = ['overpass_id','release_rate_kgh', 'operator_detected']\n",
-    "detection_prob = (overpasses['qc_summary'] =='fail_operator') & (overpasses['release_rate_kgh'] <= 30)\n",
+    "detection_prob = (overpasses['qc_summary'] =='fail_operator') & (overpasses['release_rate_kgh'] <= 50)\n",
     "# detection_prob = (overpasses['qc_summary'] =='fail_operator')\n",
-    "print(overpasses.loc[detection_prob][columns])\n"
+    "print(overpasses.loc[detection_prob][columns])\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
