GHGSat presentation figures

--- a/03_summarize_results.ipynb
+++ b/03_summarize_results.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -55,8 +55,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating operator summary file for Carbon Mapper Stage 1\n",
+      "Generating operator summary file for Carbon Mapper Stage 2\n",
+      "Generating operator summary file for Carbon Mapper Stage 3\n",
+      "Generating operator summary file for GHGSat Stage 1\n",
+      "Generating operator summary file for GHGSat Stage 2\n",
+      "Generating operator summary file for GHGSat Stage 3\n",
+      "Generating operator summary file for Kairos Stage 1\n",
+      "Generating operator summary file for Kairos Stage 2\n",
+      "Generating operator summary file for Kairos Stage 3\n",
+      "Generating operator summary file for Kairos LS23 Stage 1\n",
+      "Generating operator summary file for Kairos LS23 Stage 2\n",
+      "Generating operator summary file for Kairos LS23 Stage 3\n",
+      "Generating operator summary file for Kairos LS25 Stage 1\n",
+      "Generating operator summary file for Kairos LS25 Stage 2\n",
+      "Generating operator summary file for Kairos LS25 Stage 3\n",
+      "Generating operator summary file for MethaneAIR Stage 1\n",
+      "Generating operator summary file for MethaneAIR mIME Stage 1\n",
+      "Generating operator summary file for MethaneAIR DI Stage 1\n",
+      "Generating operator summary file for Scientific Aviation Stage 1\n",
+      "Generating operator summary file for Carbon Mapper Stage 1\n",
+      "Generating operator summary file for Carbon Mapper Stage 2\n",
+      "Generating operator summary file for Carbon Mapper Stage 3\n",
+      "Generating operator summary file for GHGSat Stage 1\n",
+      "Generating operator summary file for GHGSat Stage 2\n",
+      "Generating operator summary file for GHGSat Stage 3\n",
+      "Generating operator summary file for Kairos Stage 1\n",
+      "Generating operator summary file for Kairos Stage 2\n",
+      "Generating operator summary file for Kairos Stage 3\n",
+      "Generating operator summary file for Kairos LS23 Stage 1\n",
+      "Generating operator summary file for Kairos LS23 Stage 2\n",
+      "Generating operator summary file for Kairos LS23 Stage 3\n",
+      "Generating operator summary file for Kairos LS25 Stage 1\n",
+      "Generating operator summary file for Kairos LS25 Stage 2\n",
+      "Generating operator summary file for Kairos LS25 Stage 3\n",
+      "Generating operator summary file for MethaneAIR Stage 1\n",
+      "Generating operator summary file for MethaneAIR mIME Stage 1\n",
+      "Generating operator summary file for MethaneAIR DI Stage 1\n",
+      "Generating operator summary file for Scientific Aviation Stage 1\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate all overpass reports\n",
     "generate_all_overpass_reports(strict_discard=False, timekeeper='flightradar', gas_comp_source='km', time_ave='60')\n",
