--- a/04_parity_plots.ipynb
+++ b/04_parity_plots.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
    ],
    "source": [
     "# GHGSat Stage 1\n",
-    "\n",
+    "from plot_methods import plot_parity\n",
     "# Info for plotting\n",
     "operator = 'GHGSat'\n",
     "stage = 1\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
