--- a/03_summarize_results.ipynb
+++ b/03_summarize_results.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -55,18 +55,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating operator summary file for Carbon Mapper Stage 1\n",
+      "Generating operator summary file for Carbon Mapper Stage 2\n",
+      "Generating operator summary file for Carbon Mapper Stage 3\n",
+      "Generating operator summary file for GHGSat Stage 1\n",
+      "Generating operator summary file for GHGSat Stage 2\n",
+      "Generating operator summary file for GHGSat Stage 3\n",
+      "Generating operator summary file for Kairos Stage 1\n",
+      "Generating operator summary file for Kairos Stage 2\n",
+      "Generating operator summary file for Kairos Stage 3\n",
+      "Generating operator summary file for Kairos LS23 Stage 1\n",
+      "Generating operator summary file for Kairos LS23 Stage 2\n",
+      "Generating operator summary file for Kairos LS23 Stage 3\n",
+      "Generating operator summary file for Kairos LS25 Stage 1\n",
+      "Generating operator summary file for Kairos LS25 Stage 2\n",
+      "Generating operator summary file for Kairos LS25 Stage 3\n",
+      "Generating operator summary file for Methane Air Stage 1\n",
+      "Generating operator summary file for Scientific Aviation Stage 1\n",
+      "Generating operator summary file for Carbon Mapper Stage 1\n",
+      "Generating operator summary file for Carbon Mapper Stage 2\n",
+      "Generating operator summary file for Carbon Mapper Stage 3\n",
+      "Generating operator summary file for GHGSat Stage 1\n",
+      "Generating operator summary file for GHGSat Stage 2\n",
+      "Generating operator summary file for GHGSat Stage 3\n",
+      "Generating operator summary file for Kairos Stage 1\n",
+      "Generating operator summary file for Kairos Stage 2\n",
+      "Generating operator summary file for Kairos Stage 3\n",
+      "Generating operator summary file for Kairos LS23 Stage 1\n",
+      "Generating operator summary file for Kairos LS23 Stage 2\n",
+      "Generating operator summary file for Kairos LS23 Stage 3\n",
+      "Generating operator summary file for Kairos LS25 Stage 1\n",
+      "Generating operator summary file for Kairos LS25 Stage 2\n",
+      "Generating operator summary file for Kairos LS25 Stage 3\n",
+      "Generating operator summary file for Methane Air Stage 1\n",
+      "Generating operator summary file for Scientific Aviation Stage 1\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "generate_all_overpass_reports(strict_discard=False, timekeeper='flightradar', gas_comp_source='km', time_ave='60')\n",
     "generate_all_overpass_reports(strict_discard=True, timekeeper='flightradar', gas_comp_source='km', time_ave='60')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
