Make Kairos presentation figs + test how many measurements have error bounds that cross the parity line

--- a/00_gas_comp_data_calculations.ipynb
+++ b/00_gas_comp_data_calculations.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Process Kinder Morgan meter data\n",
+    "# Process Measurement Station meter data\n",
     "\n",
     "- Code Author: Sahar H El Abbadi\n",
     "- Date Created: 2023-03-29\n",
