Writing analysis - compare results with parity line

--- a/10_paper_analysis.ipynb
+++ b/10_paper_analysis.ipynb
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -305,6 +305,29 @@
     "operator = 'Scientific Aviation'\n",
     "strict_discard = True\n",
     "test_parity_all_stages(operator)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fraction of Carbon Mapper Stage 3 overpasses with 95% CI that encompasses parity line: 80%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from writing_analysis import calc_parity_intersection\n",
+    "import pathlib\n",
+    "operator = 'Carbon Mapper'\n",
+    "cm_3_df = calc_parity_intersection(operator, 3, strict_discard=False)\n",
+    "cm_3_df.to_csv(pathlib.PurePath('03_results', 'paper_analysis', 'cm_3_df_parity_compare.csv'))"
    ],
    "metadata": {
     "collapsed": false
