Write code to plot residuals, percent error, and absolute error

--- a/10_paper_analysis.ipynb
+++ b/10_paper_analysis.ipynb
@@ -258,31 +258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fraction of Carbon Mapper Stage 1 overpasses with 95% CI that encompasses parity line: 89%\n",
-      "Fraction of Carbon Mapper Stage 2 overpasses with 95% CI that encompasses parity line: 76%\n",
-      "Fraction of Carbon Mapper Stage 3 overpasses with 95% CI that encompasses parity line: 80%\n",
-      "\n",
-      "\n",
-      "Fraction of GHGSat Stage 1 overpasses with 95% CI that encompasses parity line: 93%\n",
-      "Fraction of GHGSat Stage 2 overpasses with 95% CI that encompasses parity line: 84%\n",
-      "Fraction of GHGSat Stage 3 overpasses with 95% CI that encompasses parity line: 84%\n",
-      "\n",
-      "\n",
-      "Fraction of MethaneAIR Stage 1 overpasses with 95% CI that encompasses parity line: 85%\n",
-      "\n",
-      "\n",
-      "Fraction of Scientific Aviation Stage 1 overpasses with 95% CI that encompasses parity line: 73%\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from writing_analysis import test_parity_all_stages\n",
     "\n",
@@ -312,22 +289,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fraction of Carbon Mapper Stage 3 overpasses with 95% CI that encompasses parity line: 80%\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from writing_analysis import calc_parity_intersection\n",
     "import pathlib\n",
     "operator = 'Carbon Mapper'\n",
     "cm_3_df = calc_parity_intersection(operator, 3, strict_discard=False)\n",
     "cm_3_df.to_csv(pathlib.PurePath('03_results', 'paper_analysis', 'cm_3_df_parity_compare.csv'))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Analyze Error Profile - Absolute, Percent Error\n",
+    "\n",
+    "- Examine percent and absolute error profile in quantification estimates\n",
+    "- Only include points that pass all QC\n",
+    "- Residuals compare the quantification estimate to the OLS best fit\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "First, determine the ranges for residuals, absolute error, and percent error. These are used in making the figures in 11_paper_figures"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Residual range is -391 to 889 kgh\n",
+      "Percent error range is -100% to 698%\n",
+      "Absolute error range is -440 to 1167\n"
+     ]
+    }
+   ],
+   "source": [
+    "from writing_analysis import determine_relevant_error_ranges\n",
+    "# Determine what to use for axis across all plots\n",
+    "# First find min and max for residuals\n",
+    "from methods_source import abbreviate_op_name\n",
+    "import pandas as pd\n",
+    "from writing_analysis import summarize_operator_stages_defaults\n",
+    "\n",
+    "\n",
+    "operator_stages = summarize_operator_stages_defaults()\n",
+    "\n",
+    "summary = []\n",
+    "for index, test in operator_stages.iterrows():\n",
+    "    operator = test['operator']\n",
+    "    stage = test['stage']\n",
+    "    strict_discard = test['strict_discard']\n",
+    "    plot_range = determine_relevant_error_ranges(operator, stage, 'pass_all', strict_discard)\n",
+    "    summary.append(plot_range)\n",
+    "\n",
+    "range_summary = pd.DataFrame(summary)\n",
+    "residual_ylim = [range_summary.min_residual.min(), range_summary.max_residual.max()]\n",
+    "percent_error_ylim = [range_summary.min_error_percent.min(), range_summary.max_error_percent.max()]\n",
+    "absolute_error_ylim = [range_summary.min_error_absolute.min(), range_summary.max_error_absolute.max()]\n",
+    "\n",
+    "print(f'Residual range is {residual_ylim[0]:.0f} to {residual_ylim[1]:.0f} kgh')\n",
+    "print(f'Percent error range is {percent_error_ylim[0]:.0f}% to {percent_error_ylim[1]:.0f}%')\n",
+    "print(f'Absolute error range is {absolute_error_ylim[0]:.0f} to {absolute_error_ylim[1]:.0f}')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "# Examine the error profile for each operator\n",
+    "from writing_analysis import calculate_residuals_and_error\n",
+    "operator = 'Carbon Mapper'\n",
+    "stage = 1\n",
+    "op_stage = calculate_residuals_and_error(operator, stage, qc_status='pass_all', strict_discard=False, time_ave=60, gas_comp_source='km')\n"
    ],
    "metadata": {
     "collapsed": false
