Calculate total number of releases and number of QC'ed releases

--- a/10_paper_analysis.ipynb
+++ b/10_paper_analysis.ipynb
@@ -25,6 +25,63 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fail_su                      189\n",
+      "missing                        7\n",
+      "operator    cmghgkairosmairsciav\n",
+      "pass_su                      515\n",
+      "releases                     711\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# All releases conducted\n",
+    "from methods_source import load_overpass_summary, find_missing_data, abbreviate_op_name\n",
+    "import pandas as pd\n",
+    "\n",
+    "def summarize_releases(operator, strict_discard=False):\n",
+    "    op_summary = load_overpass_summary(operator, stage=1, strict_discard=strict_discard)\n",
+    "    operator_missing = len(find_missing_data(operator))\n",
+    "    operator_releases = len(op_summary) + operator_missing\n",
+    "    operator_pass_su = len(op_summary.loc[op_summary.stanford_kept == True])\n",
+    "    operator_fail_su = len(op_summary.loc[op_summary.stanford_kept == False])\n",
+    "    op_ab = abbreviate_op_name(operator)\n",
+    "    summary = {\n",
+    "        f'operator': op_ab,\n",
+    "        f'releases': operator_releases,\n",
+    "        f'pass_su': operator_pass_su,\n",
+    "        f'fail_su': operator_fail_su,\n",
+    "        f'missing': operator_missing,\n",
+    "    }\n",
+    "    return summary\n",
+    "\n",
+    "\n",
+    "cm = summarize_releases('Carbon Mapper')\n",
+    "ghg = summarize_releases('GHGSat')\n",
+    "kairos = summarize_releases('Kairos')\n",
+    "mair = summarize_releases('MethaneAIR')\n",
+    "sciav = summarize_releases('Scientific Aviation', True)\n",
+    "dicts = [cm, ghg, kairos, mair, sciav]\n",
+    "\n",
+    "# Combine all dictionaries into one\n",
+    "summary = {key: [d[key] for d in dicts] for key in dicts[0]}\n",
+    "\n",
+    "# Convert to DataFrame:\n",
+    "summary = pd.DataFrame.from_records(summary)\n",
+    "print(summary.sum(axis=0))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "#### Carbon Mapper overpass summary for results"
@@ -35,8 +92,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Carbon Mapper: 121 flightlines reported to SU\n",
+      "8 overpasses that fail SU QC\n",
+      "113 overpasses that pass SU QC\n",
+      "82 overpasses quantified by Carbon Mapper\n",
+      "31 overpasses removed by Carbon Mapper\n",
+      "\n",
+      "3 overpasses documented by Stanford but not reported by Carbon Mapper\n",
+      "\n",
+      "Total releases conducted by Stanford (including missing overpasses not reported by Carbon Mapper: 124\n",
+      "\n",
+      "Smallest non-zero volume overpass for Carbon Mapper that passes SU qc:\n",
+      "Release Rate: 4.4451804176775 kg CH4 / hr\n",
+      "[4.301638947741193, 4.588721887613808, 95% CI]\n",
+      "(sigma from gas flow: 0.067039)\n",
+      "(sigma from meter: 0.039443)\n",
+      "(sigma from gas composition: 0.001617)\n",
+      "(combined total sigma: 0.073235)\n",
+      "\n",
+      "Smallest non-zero volume overpass for Carbon Mapper that passes operator and SU qc:\n",
+      "Release Rate: 4.4451804176775 kg CH4 / hr\n",
+      "[4.301638947741193, 4.588721887613808, 95% CI]\n",
+      "(sigma from gas flow: 0.067039)\n",
+      "(sigma from meter: 0.039443)\n",
+      "(sigma from gas composition: 0.001617)\n",
+      "(combined total sigma: 0.073235)\n",
+      "\n",
+      "Largest volume overpass for Carbon Mapper that passes SU qc:\n",
+      "Release Rate: 1443.09917328525 kg CH4 / hr\n",
+      "[1366.7685660986533, 1519.4297804718465, 95% CI]\n",
+      "(sigma from gas flow: 40.877526)\n",
+      "(sigma from meter: 1.936967)\n",
+      "(sigma from gas composition: 0.001362)\n",
+      "(combined total sigma: 38.944187)\n",
+      "\n",
+      "Largest volume overpass for Carbon Mapper that passes operator & SU qc:\n",
+      "Release Rate: 855.7130366849999 kg CH4 / hr\n",
+      "[844.1545076813927, 867.2715656886071, 95% CI]\n",
+      "(sigma from gas flow: 5.014883)\n",
+      "(sigma from meter: 1.143755)\n",
+      "(sigma from gas composition: 0.003645)\n",
+      "(combined total sigma: 5.897209)\n",
+      "\n",
+      "Number of zero releases to Carbon Mapper: 8\n",
+      "\n",
+      "No false positives detected, all zero releases were correctly categorized\n",
+      "\n",
+      "False negatives detected: 3\n",
+      "\n",
+      "Largest false negative for Carbon Mapper: \n",
+      "Release Rate: 6.612948731013749 kg CH4 / hr\n",
+      "[6.465319063755733, 6.7605783982717655, 95% CI]\n",
+      "(sigma from gas flow: 0.068967)\n",
+      "(sigma from meter: 0.039565)\n",
+      "(sigma from gas composition: 0.001617)\n",
+      "(combined total sigma: 0.075321)\n",
+      "\n",
+      "Smallest detected plume by Carbon Mapper:\n",
+      "Release Rate: 10.92213624004875 kg CH4 / hr\n",
+      "[10.782192540182976, 11.062079939914526, 95% CI]\n",
+      "(sigma from gas flow: 0.061894)\n",
+      "(sigma from meter: 0.039720)\n",
+      "(sigma from gas composition: 0.001617)\n",
+      "(combined total sigma: 0.071400)\n",
+      "\n",
+      "Smallest quantified plume by Carbon Mapper:\n",
+      "Release Rate: 10.92213624004875 kg CH4 / hr\n",
+      "[10.782192540182976, 11.062079939914526, 95% CI]\n",
+      "(sigma from gas flow: 0.061894)\n",
+      "(sigma from meter: 0.039720)\n",
+      "(sigma from gas composition: 0.001617)\n",
+      "(combined total sigma: 0.071400)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from writing_analysis import operator_releases_summary_stats\n",
     "# Carbon Mapper\n",
